<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="coursescards1RowModel" type="com.blogspot.thengnet.modules.dashboardone.data.model.Coursescards1RowModel"/>
    </data>
    <LinearLayout android:gravity="start"
        android:id="@+id/linearHorizontalcard"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:orientation="vertical" style="@style/groupStylegray_1">
        <ImageView android:id="@+id/imageMedia"
            android:layout_height="@dimen/_152pxh"
            android:layout_width="@dimen/_160pxh"
            android:scaleType="fitXY" imageRes="@{@drawable/img_media}"
            tools:ignore="ContentDescription" tools:src="@drawable/img_media"/>
        <LinearLayout android:id="@+id/linearContent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_5pxv"
            android:layout_width="wrap_content" android:orientation="horizontal">
            <LinearLayout android:gravity="center_horizontal"
                android:id="@+id/linearMonogram"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_1pxv"
                android:layout_marginTop="@dimen/_1pxv"
                android:layout_weight="0.29" android:layout_width="0dp"
                android:orientation="vertical" style="@style/groupStyleteal_200cornerRadius">
                <TextView android:gravity="center_horizontal"
                    android:id="@+id/txtTextcoursecod"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="@dimen/_3pxv"
                    android:layout_marginEnd="@dimen/_4pxh"
                    android:layout_marginStart="@dimen/_4pxh"
                    android:layout_marginTop="@dimen/_1pxv"
                    android:layout_width="match_parent"
                    android:letterSpacing="0.01"
                    android:lineSpacingExtra="@dimen/_1pxh"
                    android:text="@{coursescards1RowModel.txtTextcoursecod}"
                    style="@style/txtRobotomedium16" tools:text="@string/lbl_csc200"/>
            </LinearLayout>
            <LinearLayout android:gravity="start"
                android:id="@+id/linearColumnheader"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_1pxv"
                android:layout_marginEnd="@dimen/_5pxh"
                android:layout_marginStart="@dimen/_16pxh"
                android:layout_marginTop="@dimen/_1pxv"
                android:layout_weight="0.71" android:layout_width="0dp" android:orientation="vertical">
                <TextView android:id="@+id/txtHeader"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:letterSpacing="0.0"
                    android:lineSpacingExtra="@dimen/_4pxh"
                    android:text="@{coursescards1RowModel.txtHeader}"
                    style="@style/txtRobotomedium9" tools:text="@string/msg_computer_progra"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtSubhead"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_6pxh"
                    android:layout_marginTop="@dimen/_5pxv"
                    android:layout_width="match_parent"
                    android:letterSpacing="0.01"
                    android:lineSpacingExtra="@dimen/_3pxh"
                    android:singleLine="true"
                    android:text="@{coursescards1RowModel.txtSubhead}"
                    style="@style/txtRobotoregular7" tools:text="@string/msg_nam_adipiscing"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</layout>
