<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="signUpScreenZeroVM"
            type="com.blogspot.thengnet.modules.signupscreenzero.data.viewmodel.SignUpScreenZeroVM" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintSignUpZeroScreen"
        style="@style/groupStylewhite_A700"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- TODO: Display in Appbar instead -->
<!--        <androidx.appcompat.widget.AppCompatButton-->
<!--            android:id="@+id/btnPartZero"-->
<!--            style="@style/btnSolid"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:ellipsize="end"-->
<!--            android:gravity="center"-->
<!--            android:lineSpacingExtra="@dimen/_4pxh"-->
<!--            android:singleLine="true"-->
<!--            android:text="@string/lbl_part_0"-->
<!--            android:textAllCaps="false"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toTopOf="parent"-->
<!--            tools:text="@string/lbl_part_0" />-->

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/linearBiodata0Input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!-- TODO: Display in Appbar instead -->
                <TextView
                    android:id="@+id/txtSignUp"
                    style="@style/txtRobotoromancondensedblack36"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|start"
                    android:layout_marginStart="@dimen/_44pxh"
                    android:layout_marginTop="@dimen/_61pxv"
                    android:layout_marginEnd="@dimen/_44pxh"
                    android:layout_marginBottom="@dimen/_61pxv"
                    android:ellipsize="end"
                    android:letterSpacing="0.02"
                    android:lineSpacingExtra="@dimen/_7pxh"
                    android:singleLine="true"
                    android:text="@{signUpScreenZeroVM.signUpScreenZeroModel.txtSignUp}"
                    tools:text="@string/lbl_sign_up" />

                <ImageView
                    android:id="@+id/imageUndrawbooksre"
                    android:layout_width="@dimen/_359pxh"
                    android:layout_height="@dimen/_228pxh"
                    android:layout_gravity="top|center"
                    android:layout_marginTop="@dimen/_137pxv"
                    android:layout_marginEnd="@dimen/_1pxh"
                    android:layout_marginBottom="@dimen/_137pxv"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_undrawbooksre"
                    tools:ignore="ContentDescription"
                    tools:src="@drawable/img_undrawbooksre" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_56pxv"
                    android:hint="@string/hint_first_name"
                    app:endIconMode="clear_text"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        style="@style/txtRobotoregular12"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="text|textPersonName|textCapCharacters"
                        android:letterSpacing="0.02"
                        android:lineSpacingExtra="@dimen/_3pxh"
                        android:singleLine="true"
                        android:textAlignment="center"
                        android:textAllCaps="true"
                        android:textStyle="bold" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_56pxv"
                    android:hint="@string/hint_middle_name"
                    app:endIconMode="clear_text"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        style="@style/txtRobotoregular12"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="text|textPersonName|textCapCharacters"
                        android:letterSpacing="0.02"
                        android:lineSpacingExtra="@dimen/_3pxh"
                        android:singleLine="true"
                        android:textAlignment="center"
                        android:textAllCaps="true"
                        android:textStyle="bold" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_56pxv"
                    android:hint="@string/hint_last_name"
                    app:endIconMode="clear_text"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        style="@style/txtRobotoregular12"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="text|textPersonName|textCapCharacters"
                        android:letterSpacing="0.02"
                        android:lineSpacingExtra="@dimen/_3pxh"
                        android:singleLine="true"
                        android:textAlignment="center"
                        android:textAllCaps="true"
                        android:textStyle="bold" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_56pxv"
                    android:hint="@string/hint_nickname"
                    app:endIconMode="clear_text"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        style="@style/txtRobotoregular12"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="text|textPersonName|textCapCharacters"
                        android:letterSpacing="0.02"
                        android:lineSpacingExtra="@dimen/_3pxh"
                        android:singleLine="true"
                        android:textAlignment="center"
                        android:textAllCaps="true"
                        android:textStyle="bold" />
                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnNext"
                    style="@style/btnSolidRounded"
                    android:layout_width="@dimen/_78pxh"
                    android:layout_height="@dimen/_40pxv"
                    android:layout_gravity="end"
                    android:layout_marginStart="@dimen/_10pxh"
                    android:layout_marginTop="@dimen/_12pxv"
                    android:ellipsize="end"
                    android:gravity="center"
                    android:letterSpacing="0.01"
                    android:lineSpacingExtra="@dimen/_3pxh"
                    android:singleLine="true"
                    android:text="@string/lbl_next"
                    android:textAllCaps="false"
                    tools:text="@string/lbl_next" />
            </LinearLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
