<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="onboardingScreenOneVM"
            type="com.blogspot.thengnet.modules.onboardingscreenone.data.viewmodel.OnboardingScreenOneVM" />
    </data>

    <LinearLayout
        android:id="@+id/linearOnboardingScreenOne"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageImageprocessin"
            imageRes="@{@drawable/college_project_world}"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_271pxv"
            android:gravity="start"
            android:scaleType="fitXY"
            tools:ignore="ContentDescription"
            tools:src="@drawable/college_project_world" />

        <TextView
            android:id="@+id/txt_onboarding_one"
            style="@style/txtRobotoromanregular16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_22pxv"
            android:ellipsize="end"
            android:gravity="center_horizontal"
            android:letterSpacing="0.02"
            android:lineSpacingExtra="@dimen/_3pxh"
            android:text="@string/onboarding_text_one" />

        <LinearLayout
            android:id="@+id/linearOnboardingProg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_33pxv"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <View
                android:id="@+id/viewIcon"
                android:layout_width="@dimen/_12pxh"
                android:layout_height="@dimen/_12pxh"
                android:layout_marginTop="@dimen/_10pxv"
                android:layout_marginBottom="@dimen/_10pxv"
                android:background="@drawable/rectangle_bg_gray_901_radius_6" />

            <LinearLayout
                android:id="@+id/linearSegment"
                style="@style/groupStylegreen_100cornerRadius"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_6pxh"
                android:layout_weight="0.7"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <View
                    android:id="@+id/viewIconOne"
                    android:layout_width="@dimen/_12pxh"
                    android:layout_height="@dimen/_12pxh"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="@dimen/_22pxh"
                    android:layout_marginTop="@dimen/_10pxv"
                    android:layout_marginEnd="@dimen/_22pxh"
                    android:layout_marginBottom="@dimen/_10pxv"
                    android:background="@drawable/rectangle_bg_teal_200_radius_6" />
            </LinearLayout>

            <View
                android:id="@+id/viewIconTwo"
                android:layout_width="@dimen/_12pxh"
                android:layout_height="@dimen/_12pxh"
                android:layout_marginStart="@dimen/_6pxh"
                android:layout_marginTop="@dimen/_10pxv"
                android:layout_marginBottom="@dimen/_10pxv"
                android:background="@drawable/rectangle_border_gray_800_radius_6" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearPrevNextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_43pxh"
            android:layout_marginTop="@dimen/_24pxv"
            android:layout_marginEnd="@dimen/_31pxh"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnPrevious"
                style="@style/btnSolidRounded"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_40pxv"
                android:layout_marginBottom="@dimen/_8pxh"
                android:ellipsize="end"
                android:gravity="center"
                android:letterSpacing="0.01"
                android:lineSpacingExtra="@dimen/_3pxh"
                android:singleLine="true"
                android:text="@string/lbl_previous"
                android:textAllCaps="false"
                tools:text="@string/lbl_previous" />

            <Button
                android:id="@+id/btnNext"
                style="@style/btnSolidRounded"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_40pxv"
                android:layout_marginStart="@dimen/_104pxh"
                android:layout_marginBottom="@dimen/_8pxh"
                android:ellipsize="end"
                android:gravity="center"
                android:letterSpacing="0.01"
                android:lineSpacingExtra="@dimen/_3pxh"
                android:singleLine="true"
                android:text="@string/lbl_next"
                android:textAllCaps="false"
                tools:text="@string/lbl_next" />
        </LinearLayout>

    </LinearLayout>

</layout>
